--- a/www/hada/style.css
+++ b/www/hada/style.css
@@ -28,7 +28,7 @@ body {
   pointer-events: none;
   transition: opacity 0.4s ease, transform 0.4s ease;
   width: 90%;
-  max-width: 700px;
+  max-width: 800px;
   padding: 2rem;
   border: 4px solid var(--sb-thumb-color);
   background-color: #0d0d0d;
@@ -267,8 +267,8 @@ body {
 .cube-container {
   z-index: -1;
   position: absolute;
-  width: 400px;
-  height: 400px;
+  width: min(400px, 30vw);
+  height: min(400px, 30vw);
   perspective: 1600px;
   margin: 100px auto;
 }
@@ -283,8 +283,8 @@ body {
 
 .face {
   position: absolute;
-  width: 400px;
-  height: 400px;
+  width: min(400px, 30vw);
+  height: min(400px, 30vw);
   color: #16a34a;
   font-size: 32px;
   text-align: center;
@@ -327,6 +327,16 @@ body {
 
 .ai-msg{
   color: #34d399;
+}
+
+.user-msg {
+  color: #22C55E;
+  margin-bottom: 8px;
+}
+
+.bot-msg {
+  color: #34d399;
+  margin-bottom: 8px;
 }
 
 /* ----------------------------------
@@ -557,6 +567,7 @@ body {
     width: 90%;
     padding: 2rem;
     margin-top: 4rem;
+    max-width: 700px;
   }
 
   .chat-output {
